// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It sould be invalid if input enter empty value 1`] = `
<div>
  <input />
  <div>
    This required value. Please check your value and try again.
  </div>
</div>
`;

exports[`It sould be valid if input has value 1`] = `
<div>
  <input />
  <div />
</div>
`;
